Creation of Table Interface
Expansion of the already present interfaces and creation of TableInterface

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,16 @@
 # MacOS
 *.DS_Store
 
+# Windows image file caches
+Thumbs.db
+
+# Folder config file
+Desktop.ini
+
+# Files that might appear on external disk
+.Spotlight-V100
+.Trashes
+
 # Package Files #
 *.jar
 *.war
