--- a/.gitignore
+++ b/.gitignore
@@ -47,6 +47,17 @@ Desktop.ini
 .Spotlight-V100
 .Trashes
 
+#Gradle
+.gradle
+**/build/
+!src/**/build/
+
+# Ignore Gradle GUI config
+gradle-app.setting
+
+# Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
+!gradle-wrapper.jar
+
 # Package Files #
 *.jar
 *.war
