--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -9,6 +9,12 @@
 plugins {
     // Apply the java-library plugin for API and implementation separation.
     id 'java-library'
+    id 'org.openjfx.javafxplugin' version '0.0.11'
+}
+
+javafx {
+    version = '17.0.2'
+    modules = [ 'javafx.controls', 'javafx.fxml' ]
 }
 
 repositories {
