--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -10,6 +10,7 @@ plugins {
     // Apply the java-library plugin for API and implementation separation.
     id 'java-library'
     id 'org.openjfx.javafxplugin' version '0.0.11'
+    id 'application'
 }
 
 javafx {
@@ -32,6 +33,8 @@ dependencies {
     // This dependency is used internally, and not exposed to consumers on their own compile classpath.
     implementation 'com.google.guava:guava:30.1.1-jre'
 }
+
+mainClassName = 'it.unicam.cs.pa.cardgamemanager109172.Main'
 
 tasks.named('test') {
     // Use JUnit Platform for unit tests.
